# pet-project-forum

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yaml  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
django_forum/: manage.py
django_forum/core/: context_processors.py  mixins.py  rep_rules.py
django_forum/core/management/commands/: populate_fake_data.py
django_forum/django_forum/: asgi.py  settings.py  urls.py  wsgi.py
django_forum/forum/: forms.py  models.py  tests.py  urls.py  views.py
django_forum/forum/migrations/: 0001_initial.py
django_forum/home/: urls.py  views.py
django_forum/leaderboards/: tests.py  urls.py  views.py
django_forum/locale/en/LC_MESSAGES/: django.po
django_forum/locale/ru/LC_MESSAGES/: django.mo  django.po
django_forum/reviews/: forms.py  models.py  tests.py  urls.py  views.py
django_forum/reviews/migrations/: 0001_initial.py
django_forum/templates/: 404.html  base.html
django_forum/templates/forum/: answer_confirm_delete.html  answer_form.html  question_confirm_delete.html  question_detail.html  question_form.html  question_list.html
django_forum/templates/home/: home.html
django_forum/templates/includes/: footer.html  header.html
django_forum/templates/leaderboards/: leaderboard.html
django_forum/templates/reviews/: review_confirm_delete.html  review_detail.html  review_form.html  review_list.html  user_reviews.html
django_forum/templates/users/: form.html  login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  profile_edit.html  public_profile.html  signup.html  user_detail.html  user_list.html
django_forum/users/: forms.py  models.py  tests.py  urls.py  views.py
django_forum/users/migrations/: 0001_initial.py  0002_alter_userprofile_birthday.py
django_forum/users/utils/: backends.py  validators.py
django_forum/votes/: models.py  tests.py  urls.py  views.py
django_forum/votes/migrations/: 0001_initial.py
django_forum/votes/templatetags/: votes_tags.py
